--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Firebase CI Deploy
         run: |
           sudo npm install -g firebase-tools
-          firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+          firebase deploy --token ${{ secrets.FIREBASETOKEN }}
